--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<a target="_blank" href="https://twitter.com/fpgart"><i class="fab fa-twitter"></i></a>
 			<a target="_blank" href="https://stackoverflow.com/story/"><i class="fab fa-stack-overflow"></i></a>
 			<a target="_blank" href="https://www.linkedin.com/in/vangelis-vassalos"><i class="fab fa-linkedin"></i></a>
-			<a target="_blank" href="https://medium.com/"><i class="fab fa-medium"></i></a>
+			<a target="_blank" href="https://fpgart.wordpress.com/"><i class="fab fa-wordpress"></i></a>
 			<a target="_blank" href="https://www.freecodecamp.org"><i class="fab fa-free-code-camp"></i></a>
 			<a target="_blank" href="https://www.behance.net"><i class="fab fa-behance"></i></a>
 			<a target="_blank" href="https://codepen.io"><i class="fab fa-codepen"></i></a>
