--- a/index.html
+++ b/index.html
@@ -26,17 +26,14 @@
 <body>
 	<main>
 		<div class="intro">Hello, I'm Vangelis!</div>
-		<div class="tagline">Sr. FPGA ENgineer | Sr. Embedded Systems Engineer | @Irida Labs.gr </div>
+		<div class="tagline">Sr. Embedded Systems Engineer @ Irida Labs S.A. | FPGA Expert | HDL Fanatic  </div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
 			<a target="_blank" href="https://github.com/vangvassalos"><i class="fab fa-github"></i></a>
-			<a target="_blank" href="https://twitter.com/fpgart"><i class="fab fa-twitter"></i></a>
-			<a target="_blank" href="https://stackoverflow.com/story/"><i class="fab fa-stack-overflow"></i></a>
 			<a target="_blank" href="https://www.linkedin.com/in/vangelis-vassalos"><i class="fab fa-linkedin"></i></a>
 			<a target="_blank" href="https://fpgart.wordpress.com/"><i class="fab fa-wordpress"></i></a>
-			<a target="_blank" href="https://www.freecodecamp.org"><i class="fab fa-free-code-camp"></i></a>
-			<a target="_blank" href="https://www.behance.net"><i class="fab fa-behance"></i></a>
-			<a target="_blank" href="https://codepen.io"><i class="fab fa-codepen"></i></a>
+			<a target="_blank" href="https://twitter.com/fpgart"><i class="fab fa-twitter"></i></a>
+			<a target="_blank" href="https://www.dropbox.com/s/o4xz26kpqolp48e/Vassalos_CV_prof_12102017_Public.pdf?dl=0"><i class="fab fa-dropbox"></i></a>
     </div>
 	</main>
 </body>
