updated landing page 4

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>Vajgelis Vassalos | FPGA Engineer</title>
+	<title>Vangelis Vassalos</title>
 
-	<link rel="icon" href="favicon.ico" type="image/png" />
+	<link rel="icon" href="favicon2.ico" type="image/png" />
 
 	<link href="https://fonts.googleapis.com/css?family=Reem+Kufi|Roboto:300" rel="stylesheet">
 	<link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
@@ -26,7 +26,7 @@
 <body>
 	<main>
 		<div class="intro">Hello, I'm Vangelis!</div>
-		<div class="tagline">Sr. Embedded Systems Engineer @ Irida Labs S.A. | FPGA Expert | HDL Fanatic  </div>
+		<div class="tagline">Sr. Embedded Systems Engineer @  <a href=http://www.iridalabs.com style="color: #FFFFFF">Irida Labs S.A.</a> | FPGA Expert | HDL Fanatic  </div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
 			<a target="_blank" href="https://github.com/vangvassalos"><i class="fab fa-github"></i></a>
