updated landing page 5

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 			<a target="_blank" href="https://fpgart.wordpress.com/"><i class="fab fa-wordpress"></i></a>
 			<a target="_blank" href="https://twitter.com/fpgart"><i class="fab fa-twitter"></i></a>
 			<a target="_blank" href="https://www.dropbox.com/s/o4xz26kpqolp48e/Vassalos_CV_prof_12102017_Public.pdf?dl=0"><i class="fab fa-dropbox"></i></a>
+			<a target="_blank" href="mailto:vangelisvassalos@gmail.com"><i class="fab fa-google"></i></a>
     </div>
 	</main>
 </body>
