updated work title

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
 	<main>
 		<div class="intro">Hello, I'm Vangelis!</div>
-		<div class="tagline">Sr. Embedded Systems Engineer @  <a href=http://www.iridalabs.com style="color: #FFFFFF">Irida Labs S.A.</a> | FPGA Expert | HDL Fanatic  </div>
+		<div class="tagline">Sr. FPGA and Embedded Systems Engineer @  <a href=http://www.iridalabs.com style="color: #FFFFFF">Irida Labs S.A.</a> | FPGA Expert | HDL Fanatic  </div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
 			<a target="_blank" href="https://github.com/vangvassalos"><i class="fab fa-github"></i></a>
