updated profile, removed links for github, twitter, and CV

--- a/index.html
+++ b/index.html
@@ -26,14 +26,10 @@
 <body>
 	<main>
 		<div class="intro">Hello, I'm Vangelis!</div>
-		<div class="tagline">Sr. FPGA and Embedded Systems Engineer @  <a href=http://www.iridalabs.com style="color: #FFFFFF">Irida Labs S.A.</a> | FPGA Expert | HDL Fanatic  </div>
+		<div class="tagline">Head of Technology for Edge AI platforms @  <a href=http://www.iridalabs.com style="color: #FFFFFF">Irida Labs S.A.</a> | FPGA Expert | HDL Fanatic  </div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
-			<a target="_blank" href="https://github.com/vangvassalos"><i class="fab fa-github"></i></a>
 			<a target="_blank" href="https://www.linkedin.com/in/vangelis-vassalos"><i class="fab fa-linkedin"></i></a>
-			<a target="_blank" href="https://fpgart.wordpress.com/"><i class="fab fa-wordpress"></i></a>
-			<a target="_blank" href="https://twitter.com/fpgart"><i class="fab fa-twitter"></i></a>
-			<a target="_blank" href="https://www.dropbox.com/s/o4xz26kpqolp48e/Vassalos_CV_prof_12102017_Public.pdf?dl=0"><i class="fab fa-dropbox"></i></a>
 			<a target="_blank" href="mailto:vangelisvassalos@gmail.com"><i class="fab fa-google"></i></a>
     </div>
 	</main>
