--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
 	<main>
 		<div class="intro">Hello, I'm Vangelis!</div>
-		<div class="tagline">Head of Technology for Edge AI platforms @  <a href=http://www.iridalabs.com style="color: #FFFFFF">Irida Labs S.A.</a> | FPGA Expert | HDL Fanatic  </div>
+		<div class="tagline">Head of Technology for Edge AI platforms @  <a href=http://www.iridalabs.com style="color: #FFFFFF">Irida Labs S.A.</a> | Embedded Systems Expert | Edge AI Hardware Fanatic  </div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
 			<a target="_blank" href="https://www.linkedin.com/in/vangelis-vassalos"><i class="fab fa-linkedin"></i></a>
